--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -49,7 +49,7 @@
         android:ems="15"
         android:inputType="textPersonName"
 
-        android:text="Username"
+        android:text="@string/username"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -64,7 +64,7 @@
         android:layout_marginTop="20dp"
         android:ems="15"
         android:inputType="textPassword"
-        android:text="Password"
+        android:text="@string/password"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -123,6 +123,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.85"
-        app:srcCompat="@drawable/facebook_logo" />
+        app:srcCompat="@drawable/facebook_logo"
+        android:onClick="signInFace"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
