--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -16,7 +16,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.027"
-        app:navigationIcon="@drawable/abc_vector_test">
+        app:navigationIcon="@drawable/abc_vector_test"
+        android:onClick="back">
 
 
         <TextView
