--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -46,8 +46,7 @@
         android:id="@+id/username_sign_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="476dp"
-        android:ems="15"
+        android:ems="18"
         android:inputType="textPersonName"
 
         android:text="@string/username"
@@ -56,14 +55,14 @@
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_sign_in"
-        app:layout_constraintVertical_bias="0.902" />
+        app:layout_constraintVertical_bias="0.1" />
 
     <EditText
         android:id="@+id/password_sign_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:ems="15"
+        android:ems="18"
         android:inputType="textPassword"
         android:text="@string/password"
 
@@ -80,7 +79,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="LOG IN"
-        android:textSize="25dp"
+        android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -104,11 +103,11 @@
 
     <ImageView
         android:id="@+id/google_sign_in"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintHorizontal_bias="0.35"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.85"
@@ -116,15 +115,15 @@
 
     <ImageView
         android:id="@+id/facebook_sign_in"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:onClick="signInFace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.6"
+        app:layout_constraintHorizontal_bias="0.65"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.85"
-        app:srcCompat="@drawable/facebook_logo"
-        android:onClick="signInFace"/>
+        app:srcCompat="@drawable/facebook_logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
