--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -35,8 +35,7 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.096" />
-
+        app:layout_constraintVertical_bias="0.107" />
 
     <TextView
         android:id="@+id/textView"
@@ -53,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@+id/image_profile"
         app:layout_constraintVertical_bias="0.0" />
 
-    <EditText
+    <TextView
         android:id="@+id/username_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -67,7 +66,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintVertical_bias="0.25" />
 
-    <EditText
+    <TextView
         android:id="@+id/email_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -80,7 +79,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/username_profile" />
 
-    <EditText
+    <TextView
         android:id="@+id/password_profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
