--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -49,8 +49,8 @@
         android:layout_height="wrap_content"
         android:ems="18"
         android:inputType="textPersonName"
+        tools:hint="@string/username"
 
-        tools:text="@string/username"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.494"
@@ -65,7 +65,7 @@
         android:layout_marginTop="20dp"
         android:ems="18"
         android:inputType="textPassword"
-        tools:text="@string/password"
+        tools:hint="@string/password"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,6 +81,7 @@
         android:gravity="center"
         android:text="LOG IN"
         android:textSize="30dp"
+        android:onClick="signIn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -106,6 +107,7 @@
         android:id="@+id/google_sign_in"
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:onClick="signInGoogle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.35"
