--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -113,7 +113,8 @@
                android:onClick="signInFace"
                app:srcCompat="@drawable/facebook_logo"
                android:layout_marginVertical="16sp"
-               android:layout_marginHorizontal="16sp"/>
+               android:layout_marginHorizontal="16sp"
+               android:visibility="gone"/>
 
 
        </LinearLayout>
