--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -54,11 +54,12 @@
 
     <TextView
         android:id="@+id/username_profile"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="15"
         android:inputType="textPersonName"
-        android:text="@string/username"
+        android:layout_marginHorizontal="8dp"
+        tools:text="@string/username"
+        android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -68,12 +69,13 @@
 
     <TextView
         android:id="@+id/email_profile"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:ems="15"
+        android:layout_marginVertical="20dp"
+        android:layout_marginHorizontal="8dp"
         android:inputType="textPersonName"
-        android:text="@string/email"
+        tools:text="@string/email"
+        android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -90,7 +92,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/email_profile" />
+        app:layout_constraintTop_toBottomOf="@+id/email_profile"
+        android:visibility="gone"/>
 
     <Button
         android:id="@+id/button_log_out"
@@ -98,12 +101,16 @@
         android:layout_height="wrap_content"
         android:text="LOG OUT"
         android:textSize="18dp"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="8dp"
         android:onClick="signout"
+        android:background="@drawable/black_border_black_background_2dpcorner"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password_profile" />
+        app:layout_constraintTop_toBottomOf="@+id/password_profile"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
